<resources>
    <string name="app_name">administrator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="create_and_manage_events" />
    <string name="send_notifications_to_attendees" />
    <string name="view_attendance_and_check_in_data" />
    <string name="manage_qr_codes" />
    <string name="upload_event_poster" />
    <string name="copy_and_paste_qr_code" />
    <string name="limit_number_of_attendees" />
    <string name="browse_events">Browse Events</string>
    <string name="remove_event">Remove Event</string>
    <string name="browse_profiles">Browse Profiles</string>
    <string name="remove_profile">Remove Profile</string>
    <string name="browse_images">Browse Images</string>
    <string name="remove_image">Remove Image</string>
    <string name="view_event_details">View Event Details</string>
    <string name="check_into_events">Check into Events</string>
    <string name="view_notifications">View Notifications</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="update_profile">Update Profile</string>
    <string name="manage_profile_picture">Manage Profile Picture</string>
</resources>